trunk/Archive2/28/944e8abf7d599e/output
main.cpp:19:5: error: no matching function for call to 't'
    t(d);
    ^
main.cpp:14:3: note: candidate function not viable: no known conversion from 'A' to 'A (*)()' for 1st argument
A t(A());
  ^
1 error generated.
